.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
09:59:40 **** Incremental Build of configuration Debug for project Aquarium_V1_0 ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32F446xx -I../Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Src\main.o ..\Src\main.c 
..\Src\main.c: In function 'main':
..\Src\main.c:184:20: warning: passing argument 1 of 'menu_print_time' makes integer from pointer without a cast [-Wint-conversion]
    menu_print_time(&AM, &PM);
                    ^
..\Src\main.c:119:6: note: expected 'uint8_t {aka unsigned char}' but argument is of type 'char (*)[6]'
 void menu_print_time (uint8_t HoursSunrise, uint8_t MinutesSunrise,uint8_t HoursSunset, uint8_t MinutesSunset);
      ^~~~~~~~~~~~~~~
..\Src\main.c:184:25: warning: passing argument 2 of 'menu_print_time' makes integer from pointer without a cast [-Wint-conversion]
    menu_print_time(&AM, &PM);
                         ^
..\Src\main.c:119:6: note: expected 'uint8_t {aka unsigned char}' but argument is of type 'char (*)[12]'
 void menu_print_time (uint8_t HoursSunrise, uint8_t MinutesSunrise,uint8_t HoursSunset, uint8_t MinutesSunset);
      ^~~~~~~~~~~~~~~
..\Src\main.c:184:4: error: too few arguments to function 'menu_print_time'
    menu_print_time(&AM, &PM);
    ^~~~~~~~~~~~~~~
..\Src\main.c:119:6: note: declared here
 void menu_print_time (uint8_t HoursSunrise, uint8_t MinutesSunrise,uint8_t HoursSunset, uint8_t MinutesSunset);
      ^~~~~~~~~~~~~~~
..\Src\main.c: In function 'menu_print_time':
..\Src\main.c:480:4: warning: implicit declaration of function 'delet_some_chars' [-Wimplicit-function-declaration]
    delet_some_chars(5);
    ^~~~~~~~~~~~~~~~
..\Src\main.c:481:20: warning: passing argument 1 of 'lcd_send_string' from incompatible pointer type [-Wincompatible-pointer-types]
    lcd_send_string(&sunrise);
                    ^
In file included from ..\Src\main.c:46:0:
../Inc/i2c-lcd.h:9:6: note: expected 'char *' but argument is of type 'char (*)[5]'
 void lcd_send_string (char *str);  // send string to the lcd
      ^~~~~~~~~~~~~~~
..\Src\main.c:487:20: warning: passing argument 1 of 'lcd_send_string' from incompatible pointer type [-Wincompatible-pointer-types]
    lcd_send_string(&sunset);
                    ^
In file included from ..\Src\main.c:46:0:
../Inc/i2c-lcd.h:9:6: note: expected 'char *' but argument is of type 'char (*)[5]'
 void lcd_send_string (char *str);  // send string to the lcd
      ^~~~~~~~~~~~~~~
..\Src\main.c:496:19: warning: passing argument 1 of 'lcd_send_string' from incompatible pointer type [-Wincompatible-pointer-types]
   lcd_send_string(&realtime);
                   ^
In file included from ..\Src\main.c:46:0:
../Inc/i2c-lcd.h:9:6: note: expected 'char *' but argument is of type 'char (*)[5]'
 void lcd_send_string (char *str);  // send string to the lcd
      ^~~~~~~~~~~~~~~
